manifests/ingress-23.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-3166"
    labels:
        app: "diaggarw-3166"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarwae9c-diaggarw-3166.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-3166"
                servicePort: 8080
